# walkie_talkie

./: .gitignore  CMakeLists.txt  README.md  main.cpp  player.cpp  player.h  scene.h  worldscene.cpp  worldscene.h
Network/: client.cpp  client.h  client_main.cpp  packet.h  server.cpp  server.h  server_main.cpp
images/: bunny.blend  bunny.blend1
